update for asp19

--- a/src/Gab/Cells/MeetingRoomCell.xaml
+++ b/src/Gab/Cells/MeetingRoomCell.xaml
@@ -18,9 +18,9 @@
           </ResourceDictionary>
       </Grid.Resources>
 
-        <Grid.Behaviors>
+        <!--<Grid.Behaviors>
             <behaviors:MeetingRoomColoringBehavior ObservableCollection="{Binding Path=ParentBindingContext.MeetingRooms, Source={x:Reference MeetingRoomCellName}}"/>
-        </Grid.Behaviors>
+        </Grid.Behaviors>-->
 
       <Grid.ColumnDefinitions>
           <ColumnDefinition Width="60"/>
